--- a/index.html
+++ b/index.html
@@ -31,4 +31,16 @@
 </form>
 </main>
 </body>
+  <!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Eight</title>
+    </head>
+    <body>
+        <h1>Восьмёрки</h1>
+        <canvas id="canvas" width=300 height=300></canvas>
+        <script src="./js/main.js" type="module"></script>
+    </body>
+</html>
 </html>
