--- a/index.html
+++ b/index.html
@@ -25,12 +25,8 @@
 <main>
 </div>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Eight</title>
-    </head>
     <body>
-        <h1>Eight</h1>
+        <h1>Восьмёрки</h1>
         <canvas id="canvas" width=300 height=300></canvas>
         <script src="./js/main.js" type="module"></script>
     </body>
