--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 <title>МЕКСИКА</title>
 <link href="style.css" rel="stylesheet">
 </head>
-<body>
-     <h1>Восьмёрки</h1>
-        <canvas id="canvas" width=300 height=300></canvas>
-        <script src="./js/main.js" type="module"></script>
-    </body>
+body>
+<h1>Игра «Восьмёрки»</h1>
+<canvas id="canvas" width=300 height=300></canvas>
+<hr>
+<button id="btn_start_ai">start ai</button>
+<script src="./js/main.js" type="module"></script>
+</body>
 <header>
 <h1>Мексика</h1>
 <p>Говоря о Мексике, необходимо сначала определить для себя, что такое Мексика? Мексика-это государство, расположенное на северной части перешейка, продолжающегося на юг от Соединенных Штатов, и соединяющего Южную и Северную Америку. Общая площадь страны равна 1 972 550 кв. км. На востоке государство омывает Мексиканский залив и Карибское море, на западе — Тихий океан и Калифорнийский залив. Мексика имеет общую границу на юге с Гватемалой и Белизом, на севере — с США. Недалеко от мексиканских берегов расположены несколько островов, которые также принадлежат Мексике.</p>
