--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>МЕКСИКА</title>
 <link href="style.css" rel="stylesheet">
 </head>
-body>
+<body>
 <h1>Игра «Восьмёрки»</h1>
 <canvas id="canvas" width=300 height=300></canvas>
 <hr>
@@ -13,6 +13,7 @@ body>
 <script src="./js/main.js" type="module"></script>
 </body>
 <header>
+  
 <h1>Мексика</h1>
 <p>Говоря о Мексике, необходимо сначала определить для себя, что такое Мексика? Мексика-это государство, расположенное на северной части перешейка, продолжающегося на юг от Соединенных Штатов, и соединяющего Южную и Северную Америку. Общая площадь страны равна 1 972 550 кв. км. На востоке государство омывает Мексиканский залив и Карибское море, на западе — Тихий океан и Калифорнийский залив. Мексика имеет общую границу на юге с Гватемалой и Белизом, на севере — с США. Недалеко от мексиканских берегов расположены несколько островов, которые также принадлежат Мексике.</p>
 <p>Мексика представляет собой неповторимый коктейль, в котором гармонично сплелись испанская, индейская и карибская культуры. Уникальный местный колорит, богатая история 📖 воинственного народа, потрясающие природные пейзажи и зажигательный темперамент мексиканцев заманивают туристов со всего мира. Мы постараемся детально разобраться, как живёт эта яркая страна, чем Мексика и её жители способны удивить даже бывалого туриста и на что непременно стоит обратить внимание, странствуя по мексиканским долинам.</p>
